# Legion-Fabric-Scaffold

./: CMakeLists.txt  README.md  fabfile.py
cuda_thrust/: CMakeLists.txt
cuda_thrust/src/: CMakeLists.txt
cuda_thrust/test/: CMakeLists.txt
deploy/: intel.py
deploy/builder/: build.py
deploy/cirrus/: cirrus.py  cirrus.sh.mko
deploy/intel/: intel.py  intel.sh.mko
deploy/jade/: jade.py  jade.sh.mko
deploy/pbs/: pbs.py
deploy/queue/: queue.py
deploy/simple_mpi/: simple_mpi.py
deploy/slurm/: slurm.py
simple_mpi/: CMakeLists.txt
simple_mpi/src/: CMakeLists.txt
simple_mpi/test/: CMakeLists.txt
