add_executable(simple_mpi_catch catch.cpp)
add_executable(simple_mpi_catch_mpi catch_mpi.cpp)
target_link_libraries(simple_mpi_catch simple_mpi_lib  ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
target_link_libraries(simple_mpi_catch_mpi simple_mpi_lib  ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
#target_compile_features(catch PRIVATE cxx_nullptr)
#target_compile_features(catch_mpi PRIVATE cxx_nullptr)
