add_executable(catch_simple_mpi catch.cpp)
add_executable(simple_mpi_catch_mpi catch_mpi.cpp)
target_link_libraries(catch_simple_mpi simple_mpi_lib  ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
target_link_libraries(simple_mpi_catch_mpi simple_mpi_lib  ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
#target_compile_features(catch_simple_mpi PRIVATE cxx_nullptr)
#target_compile_features(catch_mpi PRIVATE cxx_nullptr)
